fix API urls to include "entries"
